syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "ErrorhandlingService";
package errorhandlingservice.protos;

service WarningReport{
    rpc Get (GetWarningReportRequest) returns (GetWarningReportResponse);
   // rpc Post (PostWarningReportRequest) returns (PostWarningReportResponse);
}

message GetWarningReportRequest{
    int64 request_id = 1;
    google.protobuf.Timestamp timestamp = 2;
    string mission_id = 3;
    string task_id = 4;
    string device_id = 5;
    string firm_id = 6;
    string version = 7;
}

message GetWarningReportResponse{
    int64 request_id = 1;
    google.protobuf.Timestamp timestamp = 2;
    string mission_id = 3;
    string task_id = 4;
    string device_id = 5;
    int32 error_code = 6;
    string warning_content = 7;
}
